# databricks-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
demo/: demo.tape  fake-databricks
demo/shim/: databricks
docs/: index.html  permissions.md  troubleshooting.md
src/: app.rs  cli.rs  config.rs  lib.rs  main.rs  schedule.rs  shape.rs  ui.rs
src/fetchers/: catalog.rs  clusters.rs  cost.rs  dashboards.rs  detail.rs  grants.rs  jobs.rs  lineage.rs  mod.rs  pipelines.rs  preview.rs  problems.rs  runs.rs  secrets.rs  upcoming.rs  updates.rs  warehouses.rs
