[package]
name = "databricks-tui"
version = "0.8.5"
edition = "2021"
description = "Terminal dashboard for Databricks"
license = "MIT"
repository = "https://github.com/pjhamera/databricks-tui"

[[bin]]
name = "databricks-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
self_update = { version = "0.42", default-features = false, features = [
    "rustls",
    "archive-tar",
    "compression-flate2",
] }

[dev-dependencies]
tokio-test = "0.4"
